# IdhagnBot-Next

./: .gitignore  README.md  pyproject.toml
idhagnbot/: __init__.py  __main__.py  args.py  concurrent.py
idhagnbot/ob12impl/telegram/: README.md  __init__.py  log.py  message.py
idhagnbot/obc/: README.md  model.py
idhagnbot/obc/v12/: action.py  app.py  event.py  files.py  message.py
idhagnbot/obc/v12/driver/: __init__.py  _common.py  ws.py  wsrev.py
idhagnbot/plugins/: README.md  telegram.py
idhagnbot/plugins/ob12impl_autostart/: __init__.py  common.py  telegram.py
src/idhagnbot/: __init__.py  __main__.py  alconna.py  asyncio.py  color.py  command.py  config.py  context.py  datetime.py  help.py  http.py  itertools.py  meme_common.py  nepattern.py  onebot.py  permission.py  target.py  text.py  url.py  waiter.py
src/idhagnbot/config/: __init__.py  driver.py  json.py  yaml.py
src/idhagnbot/hook/: __init__.py  common.py  onebot.py  satori.py  telegram.py
src/idhagnbot/i18n/: __init__.py  en-US.yaml  idhagn.yaml  zh-CN.yaml
src/idhagnbot/image/: __init__.py  table.py
src/idhagnbot/image/card/: __init__.py
src/idhagnbot/message/: __init__.py  common.py  onebot.py  satori.py  telegram.py
src/idhagnbot/plugins/: booru.py  emojimix.py  epicgames.py  epicgames_mobile.py  error.py  fab.py  geometrydash.py  gog.py  history.py  idhagnbot_epicgames.py  meme_generator.py  meme_generator_rs.py  offline_warn.py  poke_back.py  reload.py  steam.py  steam_points.py  telegram_start.py
src/idhagnbot/plugins/alias/: __init__.py  common.py  onebot.py  satori.py  telegram.py
src/idhagnbot/plugins/aspect/: __init__.py
src/idhagnbot/plugins/aspect/migrations/: 68aa680e87bb_initial_version.py
src/idhagnbot/plugins/bilibili_activity/: __init__.py  common.py
src/idhagnbot/plugins/bilibili_activity/contents/: __init__.py  article.py  audio.py  blocked.py  common.py  forward.py  image.py  opus.py  text.py  video.py
src/idhagnbot/plugins/bilibili_activity/extras/: __init__.py  common.py  goods.py  reserve.py  video.py  vote.py
src/idhagnbot/plugins/bilibili_check/: __init__.py  common.py  furry.py  vtb.py
src/idhagnbot/plugins/cabbage_doge/: __init__.py
src/idhagnbot/plugins/chat_record/: __init__.py
src/idhagnbot/plugins/chat_record/migrations/: f59af61c4219_record_outgoing.py  fbdb117674e7_initial_version.py
src/idhagnbot/plugins/daily_push/: __init__.py  cache.py  module.py
src/idhagnbot/plugins/daily_push/modules/: constant.py  countdown.py  rank.py
src/idhagnbot/plugins/fallback/: __init__.py
src/idhagnbot/plugins/fallback/migrations/: 102f32e1eac2_initial_version.py
src/idhagnbot/plugins/fortune/: __init__.py  strfile.py
src/idhagnbot/plugins/help/: __init__.py  common.py  discord.py  satori.py  telegram.py
src/idhagnbot/plugins/idhagnbot_daily_push/: __init__.py  cache.py  module.py
src/idhagnbot/plugins/idhagnbot_help/: __init__.py  common.py  telegram.py
src/idhagnbot/plugins/idhagnfetch/: __init__.py  distro.py  main.py  webui.py
src/idhagnbot/plugins/idhagnfetch/gpu/: __init__.py  amd.py  common.py  nvidia.py
src/idhagnbot/plugins/interaction/: __init__.py  common.py  onebot.py  telegram.py
src/idhagnbot/plugins/lang/: __init__.py
src/idhagnbot/plugins/lang/migrations/: d839fa7f93ef_initial_version.py
src/idhagnbot/plugins/link_parser/: __init__.py  common.py
src/idhagnbot/plugins/link_parser/contents/: bilibili_activity.py  bilibili_b23.py  bilibili_video.py  github.py
src/idhagnbot/plugins/link_parser/migrations/: e68842120d6f_initial_version.py
src/idhagnbot/plugins/music/: __init__.py
src/idhagnbot/plugins/music/sources/: base.py  netease.py
src/idhagnbot/plugins/offline_warn/: __init__.py  common.py  onebot.py
src/idhagnbot/plugins/openai/: __init__.py
src/idhagnbot/plugins/openai/migrations/: 483958b6b961_ignore.py  9f5a7fa9706e_initial_version.py
src/idhagnbot/plugins/quote/: __init__.py  common.py  onebot.py  satori.py  telegram.py
src/idhagnbot/plugins/quote/migrations/: 14d89e232e2b_initial_version.py
src/idhagnbot/plugins/regex_counter/: __init__.py
src/idhagnbot/plugins/regex_counter/migrations/: 477dc8738e42_initial_version.py
src/idhagnbot/plugins/repeat/: __init__.py  common.py  onebot.py  satori.py  telegram.py
src/idhagnbot/plugins/repeat/migrations/: 5ed5f6c8ff35_use_database_instead_of_dict.py
src/idhagnbot/webui/: __init__.py  common.py  config.py  dashboard.py  static_fastapi.py
webui/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
webui/src/: main.tsx
webui/src/components/: DashboardContainer.tsx  EmptyContainer.tsx  PrimaryH2.tsx
webui/src/routes/: Config.module.css  Config.tsx  Dashboard.tsx  Login.tsx
webui/src/routes/dashboard/: Config.tsx  Overview.tsx
webui/src/utils/: response.ts
