[project]
name = "idhagnbot"
version = "0.1.0"
description = "Cross platform chatbot based on NoneBot2 framework."
authors = [
    {name = "su226", email = "thesu226@outlook.com"},
]
dependencies = [
    "json-with-comments>=1.2.10",
    "nonebot-plugin-alconna>=0.57.4",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-orm>=0.7.7",
    "nonebot-plugin-uninfo>=0.7.3",
    "nonebot-plugin-waiter>=0.8.1",
    "nonebot2>=2.4.2",
    "pillow>=11.3.0",
    "pygobject>=3.52.3",
]
requires-python = "~=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
adapters = [
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-adapter-satori>=0.13.6",
    "nonebot-adapter-telegram>=0.1.0b20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportMissingTypeStubs = false
reportPrivateUsage = false

[tool.ruff]
line-length = 99
indent-width = 2

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "ANN401", "C901", "D", "E402", "EM", "FA100", "FIX", "INP", "PERF203", "PLR0911", "PLR0912",
    "PLR0913", "PLW0603", "RUF001", "RUF002", "RUF003", "SIM105", "SLF001", "TC006", "TD002",
    "TD003", "TRY003",
]

[tool.ruff.lint.flake8-quotes]
multiline-quotes = "single"
docstring-quotes = "single"

[tool.nonebot]
adapters = [
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"},
    {name = "Satori", module_name = "nonebot.adapters.satori"},
    {name = "Telegram", module_name = "nonebot.adapters.telegram"},
]
plugins = ["idhagnbot"]

[dependency-groups]
dev = [
    "nonebot-plugin-orm[default]>=0.7.7",
    "nonebot2[aiohttp,fastapi]>=2.4.2",
]
lint = [
    "ruff>=0.11.8",
]
stubs = [
    "pygobject-stubs>=2.13.0",
]
