[project]
name = "idhagnbot"
version = "0.1.0"
description = "Cross platform chatbot based on NoneBot2 framework."
authors = [
    {name = "su226", email = "thesu226@outlook.com"},
]
dependencies = [
    "json-with-comments>=1.2.10",
    "nonebot-plugin-alconna>=0.60.3",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-orm>=0.8.2",
    "nonebot-plugin-uninfo>=0.10.1",
    "nonebot-plugin-waiter>=0.8.1",
    "nonebot2>=2.4.4",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pygobject>=3.54.5",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
adapters = [
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-adapter-satori>=0.13.8",
    "nonebot-adapter-telegram>=0.1.0b20",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportMissingTypeStubs = false
reportPrivateUsage = false

[tool.ruff]
line-length = 99
indent-width = 2

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "ANN401", "C901", "D", "E402", "EM", "FA100", "FIX", "INP", "PERF203", "PLR0911", "PLR0912",
    "PLR0913", "PLW0603", "RUF001", "RUF002", "RUF003", "SIM105", "SLF001", "TC006", "TD002",
    "TD003", "TRY003",
]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = ["idhagnbot"]

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]
nonebot-adapter-satori = [{name = "Satori", module_name = "nonebot.adapters.satori"}]
nonebot-adapter-telegram = [{name = "Telegram", module_name = "nonebot.adapters.telegram"}]

[dependency-groups]
dev = [
    "nb-cli>=1.5.0",
    "nonebot-plugin-orm[default]>=0.8.2",
    "nonebot2[aiohttp,fastapi]>=2.4.4",
]
lint = [
    "ruff>=0.14.6",
]
stubs = [
    "pygobject-stubs>=2.14.0",
]
