[project]
name = "idhagnbot"
version = "0.1.0"
description = "Cross platform chatbot based on NoneBot2 framework."
authors = [
    {name = "su226", email = "thesu226@outlook.com"},
]
dependencies = [
    "json-with-comments>=1.2.10",
    "nonebot-plugin-alconna>=0.60.3",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-orm>=0.8.2",
    "nonebot-plugin-uninfo>=0.10.1",
    "nonebot-plugin-waiter>=0.8.1",
    "nonebot2>=2.4.4",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pygobject>=3.54.5",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
adapters = [
    "nonebot-adapter-discord>=0.1.8",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-adapter-satori>=0.13.8",
    "nonebot-adapter-telegram>=0.1.0b20",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportMissingTypeStubs = false
reportPrivateUsage = false

[tool.ruff]
line-length = 99
indent-width = 2

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "ANN401", # any-type
    "ARG", # flake8-unused-arguments (让 Pyright 来吧)
    "B008", # function-call-in-default-argument (干扰 NoneBot 依赖注入)
    "B010", # set-attr-with-constant
    "BLE001", # blind-except (自动忽略 logging.exception 但不忽略 loguru.exception)
    "C901", # complex-structure
    "D", # pydocstyle
    "DTZ", # flake8-datetimez
    "E402", # module-import-not-at-top-of-file
    "E741", # ambiguous-variable-name
    "EM", # flake8-errmsg
    "F401", # unused-import (让 Pyright 来吧)
    "FA100", # future-rewritable-type-annotation
    "FBT001", # boolean-type-hint-positional-argument
    "FBT002", # boolean-default-value-positional-argument
    "FIX", # flake8-fixme
    "INP001", # implicit-namespace-package
    "N818", # error-suffix-on-exception-name
    "PERF203", # try-except-in-loop
    "PLR0904", # too-many-public-methods
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-locals
    "PLR0915", # too-many-statements
    "PLR0916", # too-many-boolean-expressions
    "PLR0917", # too-many-positional-arguments
    "PLR2004", # magic-value-comparison
    "PLW0603", # global-statement
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "S101", # assert
    "S311", # suspicious-non-cryptographic-random-usage
    "S603", # subprocess-without-shell-equals-true (容易误报)
    "S607", # start-process-with-partial-path
    "SIM105", # suppressible-exception
    "SLF001", # private-member-access
    "TC006", # runtime-cast-value
    "TD002", # missing-todo-author
    "TD003", # missing-todo-link
    "TRY003", # raise-vanilla-args
]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = ["idhagnbot"]

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]
nonebot-adapter-satori = [{name = "Satori", module_name = "nonebot.adapters.satori"}]
nonebot-adapter-telegram = [{name = "Telegram", module_name = "nonebot.adapters.telegram"}]

[dependency-groups]
dev = [
    "nb-cli>=1.5.0",
    "nonebot-plugin-orm[default]>=0.8.2",
    "nonebot2[aiohttp,fastapi]>=2.4.4",
]
lint = [
    "ruff>=0.14.6",
]
stubs = [
    "pygobject-stubs>=2.14.0",
]
